Fix HTML structure

--- a/abhinandhtmlmca/navigation.html
+++ b/abhinandhtmlmca/navigation.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Side Navigation Example<title>
+<title>Side Navigation Example</title>
 <style>
 body{
 margin:0;
@@ -10,8 +10,8 @@ padding:0;
 height:100%;
 width:160px;
 position:fixed;
-top=0;
-left=0;
+top:0;
+left:0;
 padding-top:20px;
 background-color:green;
 }
@@ -35,17 +35,18 @@ margin:0;
 body{
 height:2000px;
 }
-<style>
-<head>
+</style>
+</head>
 <body>
 <div class="sidenav">
-<a href="#About">About Us<a>
-<a href="#Departments">Departments<a>
-<a href="#vision">Vision And Mission<a>
-<a href="#Contact">Contact Us<a>
-<div>
+<a href="#About">About Us</a>
+<a href="#Departments">Departments</a>
+<a href="#vision">Vision And Mission</a>
+<a href="#Contact">Contact Us</a>
+</div>
 <div class="main">
-<h1>Side Bar Example<h1>
-<div>
-<body>
-<html>
+<h1>Side Bar Example</h1>
+</div>
+</body>
+</html>
+
